--- a/README.adoc
+++ b/README.adoc
@@ -84,3 +84,18 @@ To test the application, access link:http://localhost:8080/qr-code/foo%20bar%20b
 ----
 docker stop qr-code-generator
 ----
+
+== Contributors ✨
+
+Thanks goes to these wonderful people (https://allcontributors.org/docs/en/emoji-key[emoji key]):
+
+++++
+<!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
+<!-- prettier-ignore-start -->
+<!-- markdownlint-disable -->
+
+<!-- markdownlint-restore -->
+<!-- prettier-ignore-end -->
+
+<!-- ALL-CONTRIBUTORS-LIST:END -->
+++++
